@@ -1041,6 +1041,11 @@ WebCore::IntRect InputHandler::boundingBoxForInputField()
     if (!m_currentFocusElement->renderer())
         return WebCore::IntRect();
 
+    // type="search" can have a 'X', so take the inner block bounding box to not include it.
+    if (HTMLInputElement* element = m_currentFocusElement->toInputElement())
+        if (element->isSearchField())
+            return element->innerBlockElement()->renderer()->absoluteBoundingBoxRect();
+
     return m_currentFocusElement->renderer()->absoluteBoundingBoxRect();
 }
 
