@@ -1,3 +1,15 @@
+2012-10-23  Rob Buis  <rbuis@rim.com>
+
+        [BlackBerry] Make selection in search input box not overlap cancel button
+        https://bugs.webkit.org/show_bug.cgi?id=100130
+
+        Reviewed by Antonio Gomes.
+
+        This ensures that even when selection is active, the user can still press 'cancel'.
+
+        * WebKitSupport/InputHandler.cpp:
+        (BlackBerry::WebKit::InputHandler::boundingBoxForInputField):
+
 2012-10-23  Arvid Nilsson  <anilsson@rim.com>
 
         [BlackBerry] Let WebKit manage the SelectionOverlay
